--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,23 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 30px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item {
+  width: calc((100% - 30px * 2) / 3);  
+}
+.img {
+  display: block;
+  width: 100%;
+  border: 2px solid;
+  border-color: aqua;
+}
